RESOLVED FIXED258648
Zillow map sometimes resets when browsing on iPad
https://bugs.webkit.org/show_bug.cgi?id=258648
Summary Zillow map sometimes resets when browsing on iPad
Sammy Gill
Reported 2023-06-28 16:05:10 PDT
To reproduce: 1. Go to Zillow.com 2. Search for another location (ex. Seattle) 3. Move the map a little bit so the location is now offset 4. Background the app 5. Foreground the app The map will now be back to the initial location when the page first loaded. Additionally, if you now go to search for another location (e.g. San Diego), and perform the same set of steps the map will get placed back to Seattle This looks like it is due to window resize events being fired during the backgrounding process. The behavior does not reproduce on other browsers on iPad
Attachments
Sammy Gill
Comment 1 2023-06-28 16:05:31 PDT
Sammy Gill
Comment 2 2023-06-28 17:04:27 PDT
EWS
Comment 3 2023-06-29 08:53:14 PDT
Committed 265621@main (3f1250c62c35): <https://commits.webkit.org/265621@main> Reviewed commits have been landed. Closing PR #15388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.